test/integration/good/validate_logical_negate_expr_good.stan
transformed data {
  int n;
  n = !n;
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}
